--- a/index.html
+++ b/index.html
@@ -5,28 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" media='screen and (min-width: 381px)' href="styles/desktop.css">
   
   <title>Frontend Mentor | Product preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Preview
+ <div class="container center">
+    <div class="card">
+      <div class="card-image">
+        <img src="images/image-product-desktop.jpg" alt="Product">
+      </div>
+      <div class="card-body">
+        <div class="sub-text">
+          P E R F U M E
+        </div>
+        <div class="card-title">
+          Gabrielle Essence Eau De Parfum
+        </div>
+        <div class="card-caption">
+          A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL
+        </div>
+        <div class="price-tag">
 
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
+        </div>
+        <button class="card-button" type="submit">Add to Cart</button>
+      </div>
+    </div>
+ </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
