--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
       </div>
       <div class="card-body">
         <div class="sub-text">
-          P E R F U M E
+         <span id="sub-text">Perfume</span> 
         </div>
         <div class="card-title">
-          Gabrielle Essence Eau De Parfum
+         <h1 id="title">Gabrielle Essence Eau De Parfum</h1> 
         </div>
         <div class="card-caption">
-          A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL
+          A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+          Perfumer-Creator for the House of CHANEL.
         </div>
         <div class="price-tag">
-
+          <span id="checkout-price">$149.99</span> <span id="retail-price">$169.99</span>
         </div>
-        <button class="card-button" type="submit">Add to Cart</button>
+        <button class="card-button" type="submit"> <span id="btn-cart"></span> Add to Cart</button>
       </div>
     </div>
  </div>
